<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FAQFragment">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:text="@string/PreguntaFrecuente1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:text="@string/Respuesta1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:text="@string/PreguntaFrecuente2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:text="@string/Respuesta2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:text="@string/PreguntaFrecuente3"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:text="@string/Respuesta3"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:text="@string/PreguntaFrecuente4"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:text="@string/Respuesta4"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:text="@string/PreguntaFrecuente5"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:text="@string/Respuesta5"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:text="@string/Respuesta6"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:text="@string/Respuesta7"/>

        </LinearLayout>

</ScrollView>