<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTextIngresarTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:hint="@string/titulo_publicacion"
        android:fontFamily="sans-serif-medium"
        />

    <EditText
        android:id="@+id/editTextIngresarDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:hint="@string/descripcion_publicacion"
        android:fontFamily="sans-serif-medium"
        />

    <Button
        android:id="@+id/btnGuardarPublicacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gris"
        android:text="@string/guardar"
        />


</LinearLayout>